--- a/UniversidadesAPI/appsettings.Development.json
+++ b/UniversidadesAPI/appsettings.Development.json
@@ -5,4 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "connectionStrings": {
+    "DefaultConnection": "replace"
+  },
+  "Jwt": {
+    "Key": "replace",
+    "Issuer": "localhost:7240",
+    "Audience": "localhost:7240",
+    "Subject": "test"
+  },
+  "EmailSenderKey": "",
+  "FrontendUrl": "http://localhost:3000",
+  "BackendUrl":  ""
 }
