--- a/UniversidadesAPI/appsettings.json
+++ b/UniversidadesAPI/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "connectionStrings": {
+    "DefaultConnection": "replace"
+  },
+  "Jwt": {
+    "Key": "replace",
+    "Issuer": "localhost:7240",
+    "Audience": "localhost:7240",
+    "Subject": "test"
+  },
+  "FrontendUrl": "http://localhost:3000",
+  "EmailSenderKey": "replace",
+  "AllowedHosts": "*",
+  "BackendUrl":  ""
 }
